--- a/.github/workflows/backends-release.yml
+++ b/.github/workflows/backends-release.yml
@@ -118,6 +118,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.repository == 'prefix-dev/pixi'
     permissions:
+      id-token: write
+      attestations: write
       contents: read
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
