--- a/pixi-build-backends/recipe/all-backends/recipe.yaml
+++ b/pixi-build-backends/recipe/all-backends/recipe.yaml
@@ -361,6 +361,9 @@ outputs:
         - py-pixi-build-backend >=0.4.1,<0.5
 
     build:
+      skip:
+        - win
+        - osx
       script:
         - pip install pixi-build-backends/backends/pixi-build-ros -vv --no-build-isolation
       noarch: python
