--- a/pixi-build-backends/recipe/all-backends/recipe.yaml
+++ b/pixi-build-backends/recipe/all-backends/recipe.yaml
@@ -362,8 +362,7 @@ outputs:
 
     build:
       skip:
-        - win
-        - osx
+        - not (linux and x86_64)
       script:
         - ${{ PYTHON }} -m pip install pixi-build-backends/backends/pixi-build-ros -vv --no-build-isolation
       noarch: python
