--- a/pixi.toml
+++ b/pixi.toml
@@ -59,16 +59,32 @@ scripts = ["scripts/activate.sh"]
 RUSTC_WRAPPER = "sccache"
 
 [feature.backends-release.dependencies]
-rattler-build = ">=0.55.0,<0.56"
-sccache = ">=0.12,<0.13"
+rattler-build = { git = "https://github.com/prefix-dev/rattler-build.git", branch = "refactor" }
+sccache = ">=0.13.0,<0.14"
 
 [feature.backends-release.tasks]
-generate-matrix = { cmd = "python pixi-build-backends/scripts/generate-matrix.py", description = "Generate build matrix for backends release" }
+generate-versions = { cmd = "python pixi-build-backends/scripts/generate-versions.py", description = "Generate version env vars for CI" }
+[feature.backends-release.tasks.generate-attestations]
+args = ["attestation_bundle"]
+cmd = "python pixi-build-backends/scripts/generate-attestations.py {{ attestation_bundle }}"
+description = "Generate attestation files for conda packages"
 
-[feature.backends-release.tasks.build-recipe-ci]
-args = ["output_dir", "recipe", { arg = "target_platform", default = "" }]
-cmd = "rattler-build build --test native --channel https://prefix.dev/pixi-build-backends --channel https://prefix.dev/conda-forge --variant-config pixi-build-backends/recipe/variants.yaml --output-dir={{ output_dir }} --recipe {{ recipe }}{% if target_platform is defined and target_platform %} --target-platform {{ target_platform }}{% endif %}"
-description = "Build a backend recipe for CI"
+[feature.backends-release.tasks.build-backend-packages]
+args = ["target_platform"]
+cmd = """
+rm -rf output/bld/ && \
+  rattler-build build  \
+  --experimental \
+  --no-build-id \
+  --test native \
+  --channel-priority disabled \
+  --channel https://prefix.dev/conda-forge \
+  --variant-config pixi-build-backends/recipe/variants.yaml \
+  --recipe pixi-build-backends/recipe/all-backends/recipe.yaml \
+  --target-platform {{ target_platform }}
+"""
+description = "Build a backend packages"
+
 
 #
 # Feature for development tools and utilities
@@ -376,7 +392,7 @@ build-trampoline = { cmd = "python trampoline/build-trampoline.py", description 
 #
 [environments]
 backends-release = { features = ["backends-release", "python"] }
-dev = { features = ["rust", "compilers", "python", "dev"] }
+default = { features = ["rust", "compilers", "python", "python-test-deps", "dev"] }
 dist = { features = ["dist"] }
 docs = { features = ["rust", "compilers", "python", "docs"] }
 lefthook = { features = ["lefthook"] }
