--- a/pixi.toml
+++ b/pixi.toml
@@ -64,11 +64,10 @@ sccache = ">=0.13.0,<0.14"
 
 [feature.backends-release.tasks]
 generate-versions = { cmd = "python pixi-build-backends/scripts/generate-versions.py", description = "Generate version env vars for CI" }
-[feature.backends-release.tasks.generate-attestations]
-args = ["output_dir", "attestation_bundle"]
-cmd = "python pixi-build-backends/scripts/generate-attestations.py {{ attestation_bundle }} --output-dir {{ output_dir }}"
-description = "Generate attestation files for conda packages"
-
+[feature.backends-release.tasks.upload-packages]
+args = ["packages_dir"]
+cmd = "python pixi-build-backends/scripts/upload-packages.py {{ packages_dir }}"
+description = "Upload conda packages to prefix.dev with attestation"
 [feature.backends-release.tasks.build-backend-packages]
 args = ["target_platform"]
 cmd = """
