--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -149,6 +149,7 @@ nav:
   - Distributing:
       - Pixi Pack: deployment/pixi_pack.md
       - Authentication: deployment/authentication.md
+      - JFrog Artifactory: deployment/artifactory.md
       - Container: deployment/container.md
       - S3: deployment/s3.md
   - Integration:
