feat: Relative path support for pypi deps in Lockfile
This PR replaces #4788!

Make pixi handle relative paths to pypi dependencies in the LockFile. This
helps when checking in pixi.lock files that reference local python packages.
Instead of ending up with a machine specific path in the lock file we have
relative path that should work for all developers.

This depends on the rattler part which is here: conda/rattler#1760 -- as
seen in the feature/lockfile-v7 branch in the `conda/rattler` repository!

The PR consists of several changes:

 - Update to the rattler_lock API changes made in feat: Relative path
   support in LockFile conda/rattler#1760
 - Make sure the non-pep508-extensions are enabled in pixi as well
   Convert between uv relative paths and pixi relative paths
 - It adapts pyproject.toml parsing to preserve relative path in
   python requirements and in the `tool.pixi.pypi-dependencies` section

The last is the big improvement over #4788.

Relates to: #4680

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,7 +99,7 @@ ordermap = "1.0.0"
 parking_lot = "0.12.4"
 pathdiff = "0.2.3"
 pep440_rs = "0.7.3"
-pep508_rs = "0.9.2"
+pep508_rs = { version = "0.9.2", features = ["non-pep508-extensions"] }
 percent-encoding = "2.3.1"
 pin-project-lite = "0.2.16"
 pixi_allocator = { path = "crates/pixi_allocator" }
