--- a/pixi.toml
+++ b/pixi.toml
@@ -16,6 +16,9 @@ requires-pixi = ">=0.45"
 [workspace.target.linux-64.build-variants]
 c_stdlib_version = ["2.17"]
 
+[workspace.target.osx.build-variants]
+c_compiler_version = ["19"]
+
 #
 # Shared feature for C/C++ compilers and build tools
 #
