Add Windows manifest to pixi binaries
Embeds a Windows application manifest into pixi and pixi_trampoline
binaries, enabling long path support (>260 chars) when the system has
LongPathsEnabled set in the registry.

Without this manifest, Windows silently enforces MAX_PATH limits
regardless of registry settings, causing "os error 3" (path not found)
on deeply nested paths (e.g. GitHub Actions runners).

Based on: https://github.com/astral-sh/uv/pull/16894

--- a/crates/pixi/Cargo.toml
+++ b/crates/pixi/Cargo.toml
@@ -30,6 +30,9 @@ pixi_cli = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
 
 
+[build-dependencies]
+embed-manifest = { workspace = true }
+
 [dev-dependencies]
 async-trait = { workspace = true }
 chrono = { workspace = true }
