--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ dialoguer = "0.12.0"
 digest = "0.10"
 dirs = "6.0.0"
 dunce = "1.0.5"
+embed-manifest = "1.5.0"
 fancy_display = { path = "crates/fancy_display" }
 flate2 = "1.1.0"
 fs-err = { version = "3.1.0" }
