ci: trigger rebuild

--- a/.github/workflows/backends-python-bindings.yml
+++ b/.github/workflows/backends-python-bindings.yml
@@ -31,7 +31,7 @@ jobs:
     name: Test the Python bindings
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
         with:
           submodules: recursive
           persist-credentials: false
