fix: add missing LICENSE to pixi-build-cmake files in recipe

--- a/pixi-build-backends/recipe/all-backends/recipe.yaml
+++ b/pixi-build-backends/recipe/all-backends/recipe.yaml
@@ -111,6 +111,7 @@ outputs:
       files:
         - bin/pixi-build-cmake
         - bin/pixi-build-cmake.exe
+        - LICENSE
         - THIRDPARTY.yml
       script:
         - if: unix
